--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <canvas id="usageChart" width="800" height="400"></canvas>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.js"></script> <!-- CDN 読込 :contentReference[oaicite:2]{index=2} -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.js"></script>
   <script>
     fetch('data/usage.json')
       .then(res => res.json())
