--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>HealthAnalysis</title>
 </head>
 <body>
+  <h1>HealthAnalysis</h1>
+  <p>It abstracts the health status of each device from its usage time calculated from <a href="https://www.rescuetime.com/">RescueTime</a> and analyzes the data.</p>
+  <h2></h2>
   <canvas id="usageChart" width="800" height="400"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.js"></script>
   <script>
@@ -26,5 +29,7 @@
         );
       });
   </script>
+  <p><a href="https://github.com/Uchida16104/HealthAnalysis">Repository</a></p>
+  <p>by <a href="https://hirotoshiuchida.glitch.me">Hirotoshi Uchida</a></p>
 </body>
 </html>
