--- a/index.html
+++ b/index.html
@@ -56,6 +56,73 @@
         );
       });
   </script>
+  <canvas id="usageDoughnut" width="400" height="400" style="background: black;"></canvas>
+  <script>
+    fetch('data/usage.json')
+      .then(res => res.json())
+      .then(raw => {
+        const uniqueMap = raw.reduce((acc, item) => {
+          acc[item.date] = item;
+          return acc;
+        }, {});
+        const history = Object.values(uniqueMap)
+          .sort((a, b) => new Date(a.date) - new Date(b.date));
+        
+        const first = history[0].devices;
+        const last  = history[history.length - 1].devices;
+
+        const usage = Object.keys(last).map(name =>
+          Math.max(last[name] - (first[name] || 0), 0)
+        );
+
+        const labels = Object.keys(last);
+
+        const data = {
+          labels,
+          datasets: [{
+            label: 'Usage Rate',
+            data: usage,
+            backgroundColor: [
+              'rgba(255, 99, 132, 0.6)',
+              'rgba(54, 162, 235, 0.6)',
+              'rgba(255, 206, 86, 0.6)'
+            ],
+            borderColor: [
+              'rgba(255, 99, 132, 1)',
+              'rgba(54, 162, 235, 1)',
+              'rgba(255, 206, 86, 1)'
+            ],
+            borderWidth: 1
+          }]
+        };
+
+        new Chart(
+          document.getElementById('usageDoughnut'),
+          {
+            type: 'doughnut',
+            data,
+            options: {
+              plugins: {
+                title: {
+                  display: true,
+                  text: 'Device Usage Distribution'
+                },
+                tooltip: {
+                  callbacks: {
+                    label: (ctx) => {
+                      const total = usage.reduce((a, b) => a + b, 0);
+                      const value = usage[ctx.dataIndex];
+                      const pct = total ? (value / total * 100).toFixed(1) : 0;
+                      return `${ctx.label}: ${pct}% (${value})`;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        );
+      });
+</script>
   <p><a href="https://github.com/Uchida16104/HealthAnalysis">Repository</a></p>
   <p>by <a href="https://hirotoshiuchida.glitch.me">Hirotoshi Uchida</a></p>
 </body>
