--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         });
 
         document.body.appendChild(container);
-        const anchor = document.querySelector('h2');
+        const anchor = document.querySelector('p');
         anchor.parentNode.insertBefore(container, anchor.nextSibling);
       });
   </script>
