--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           const p = document.createElement('p');
           p.textContent = `${name} Average: ${avg.toFixed(2)}h — ${keep ? 'Keep' : 'Over'}`;
           p.style.color = keep ? '#36A2EB' : '#FF6384';
-          p.style.fontSize = '1.1em';
+          p.style.fontSize = '12px';
           p.style.margin = '0px';
           container.appendChild(p);
         });
