--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
   </style>
   <script>
-    const AUTH_TOKEN = "__AUTH_TOKEN__";
+    const AUTH_TOKEN = __AUTH_TOKEN__;
     (function() {
       const user = prompt("Username:");
       if (!user) location.href = "https://github.com";
