deploy: b0c47bd2a84a67352682b6544944d6dc7295fbc4

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
   </style>
   <script>
-    const AUTH_TOKEN = "cm9vdDpyb290";
+    const AUTH_TOKEN = cm9vdDpyb290;
     (function() {
       const user = prompt("Username:");
       if (!user) location.href = "https://github.com";
