--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       color: white;
     }
   </style>
-  <script src="./script.js"></script>
+  <script src="./index.js"></script>
 </head>
 <body>
   <h1>HealthAnalysis</h1>
