--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     function authenticate() {
       const username = prompt('Please enter user name:');
       const password = prompt('Please enter password:');
-      const res = await fetch('data/users.json');
+      const res = fetch('data/users.json');
       const users = res.ok ? await res.json() : [];
       const user = users.find(u => u.username === username && u.password === password);
 
