--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       const username = prompt('Please enter user name:');
       const password = prompt('Please enter password:');
       const res = fetch('data/users.json');
-      const users = res.ok ? await res.json() : [];
+      const users = res.ok ? res.json() : [];
       const user = users.find(u => u.username === username && u.password === password);
 
       if (user) {
