--- a/index.html
+++ b/index.html
@@ -10,37 +10,30 @@
     }
   </style>
   <script>
-    function authenticate() {
-      const username = prompt('Please enter user name:');
-      const password = prompt('Please enter password:');
-      const res = fetch('data/users.json');
-      const users = res.ok ? res.json() : [];
-      const user = users.find(u => u.username === username && u.password === password);
-
-      if (user) {
-        alert('Authentication succeeded!');
-        window.location.href = 'https://uchida16104.github.io/HealthAnalysis/';
-      } else {
-        alert('Authentication failed.');
-        window.location.href = 'http://hirotoshiuchida.glitch.me/';
+  async function authenticate() {
+    const username = prompt('Username:');
+    const password = prompt('Password:');
+    const token = btoa(`${username}:${password}`);
+    const res = await fetch('data/users.json', {
+      headers: {
+        'Authorization': `Basic ${token}`
       }
+    });
+    if (res.status === 200) {
+      alert('Succeeded');
+      window.location.href = 'https://uchida16104.github.io/HealthAnalysis/';
+    } else if (res.status === 401) {
+      alert('Failed');
+      window.location.href = 'http://hirotoshiuchida.glitch.me/';
+    } else {
+      console.error('Unexpected status:', res.status);
     }
-    
-    function checkAuthStatus() {
-      const isAuthenticated = localStorage.getItem('isAuthenticated');
-      if (!isAuthenticated) {
-        authenticate();
-      }
-    }
+  }
 
-    function markAuthenticated() {
-      localStorage.setItem('isAuthenticated', 'true');
-    }
-
-    window.onload = () => {
-      checkAuthStatus();
-    };
-  </script>
+  window.onload = () => {
+    authenticate();
+  };
+</script>
 </head>
 <body>
   <h1>HealthAnalysis</h1>
