--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@
     }
   </style>
   <script>
-  async function authenticate() {
-    const username = prompt('Username:');
-    const password = prompt('Password:');
-    const token = btoa(`${username}:${password}`);
-    const res = await fetch('data/users.json', {
-      headers: {
-        'Authorization': `Basic ${token}`
+    function authenticate() {
+         const username = prompt('Username:');
+         const password = prompt('Password:');
+         const users = JSON.parse(localStorage.getItem('users')) || [];
+         const user = users.find(user => user.username === username && user.password === password);
+         if (user) {
+             alert('Authentication succeeded!');
+             window.location.href = '/';
+           } else {
+             alert('Authentication failed.');
+             window.location.href = 'http://hirotoshiuchida.glitch.me/';
+           }
+       }
+    function checkAuthStatus() {
+         const isAuthenticated = localStorage.getItem('isAuthenticated');
+         if (!isAuthenticated) {
+             authenticate();
+           }
+       }
+    function markAuthenticated() {
+        localStorage.setItem('isAuthenticated', 'true');
       }
-    });
-    if (res.status === 200) {
-      alert('Succeeded');
-      window.location.href = 'https://uchida16104.github.io/HealthAnalysis/';
-    } else if (res.status === 401) {
-      alert('Failed');
-      window.location.href = 'http://hirotoshiuchida.glitch.me/';
-    } else {
-      console.error('Unexpected status:', res.status);
-    }
-  }
-
-  window.onload = () => {
-    authenticate();
-  };
+    window.onload = () => {
+      checkAuthStatus();
+    };
 </script>
 </head>
 <body>
