--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          const user = users.find(user => user.username === username && user.password === password);
          if (user) {
              alert('Succeeded!');
-             window.location.href = '/';
+             window.location.href = '/HealthAnalysis';
            } else {
              alert('Failed.');
              window.location.href = './manage.html';
