--- a/manage.html
+++ b/manage.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <h1>User Control Panel</h1>
-  <button onclick="location.href='/'">The page to be entered</button>
+  <button onclick="location.href='https://uchida16104.github.io/HealthAnalysis'">The page to be entered</button>
   <button onclick="location.href='https://uchida16104.github.io/Password-Maker-for-Web/'">Create username or password</button>
   <form onsubmit="addUser(); return false;">
     <label for="username">username:</label>
