--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
          const user = users.find(user => user.username === username && user.password === password);
          if (user) {
              alert('Succeeded!');
-             window.location.href = '/HealthAnalysis';
+             window.location.href = 'https://uchida16104.github.io/HealthAnalysis';
            } else {
              alert('Failed.');
-             window.location.href = './manage.html';
+             window.location.href = 'https://uchida16104.github.io/HealthAnalysis/manage.html';
            }
        }
     function checkAuthStatus() {
