--- a/index.html
+++ b/index.html
@@ -4,150 +4,119 @@
   <meta charset="UTF-8">
   <title>HealthAnalysis</title>
   <style>
-    body { background: black; color: white; font-family: sans-serif; }
-    section { display: none; padding: 20px; }
-    canvas { background: black; display: block; margin: 20px auto; }
-    #charts { text-align: center; }
-    button, input, label { background: #222; color: #fff; border: 1px solid #555; padding: 5px; margin: 5px; }
+    * { background: black; color: white; }
+    #mainSection, #managementSection { display: none; padding: 1rem; }
+    button { margin: 0.5rem 0; }
   </style>
-</head>
-<body>
-  <section id="login">
-    <h1>Login</h1>
-    <label>Username: <input type="text" id="loginUser"></label><br>
-    <label>Password: <input type="password" id="loginPass"></label><br>
-    <button id="btnLogin">Login</button>
-  </section>
-  <section id="main">
-    <h1>HealthAnalysis</h1>
-    <p>It abstracts the health status of each device from its usage time calculated from <a href="https://www.rescuetime.com/" target="_blank">RescueTime</a> and analyzes the data.</p>
-    <div id="charts">
-      <canvas id="usageChart" width="800" height="400"></canvas>
-      <canvas id="usageDoughnut" width="400" height="400"></canvas>
-    </div>
-    <p><a href="https://github.com/Uchida16104/HealthAnalysis" target="_blank">Repository</a></p>
-    <p>by <a href="https://hirotoshiuchida.glitch.me" target="_blank">Hirotoshi Uchida</a></p>
-    <button id="btnLogout">Logout</button>
-  </section>
-  <section id="admin">
-    <h1>User Control Panel</h1>
-    <form id="formAdd">
-      <label for="username">username:</label>
-      <input type="text" id="username" required><br>
-      <label for="password">password:</label>
-      <input type="password" id="password" required><br>
-      <button type="submit">Add user</button>
-    </form>  
-    <h2>Registered users</h2>
-    <ul id="userList"></ul>
-    <button id="btnBackToLogin">Back to Login</button>
-  </section>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.js"></script>
   <script>
-    const loginSec = document.getElementById('login');
-    const mainSec  = document.getElementById('main');
-    const adminSec = document.getElementById('admin');
-    function showSection() {
-      const auth = localStorage.getItem('isAuthenticated') === 'true';
-      if (!auth) {
-        loginSec.style.display = 'block';
-        mainSec.style.display  = 'none';
-        adminSec.style.display = 'none';
-      } else {
-        loginSec.style.display = 'none';
-        mainSec.style.display  = 'block';
-        adminSec.style.display = 'none';
-        initCharts();
-      }
-    }
-    document.getElementById('btnLogin').onclick = () => {
-      const u = document.getElementById('loginUser').value;
-      const p = document.getElementById('loginPass').value;
+    // Authentication functions
+    function authenticate() {
+      const username = prompt('Username:');
+      const password = prompt('Password:');
       const users = JSON.parse(localStorage.getItem('users')) || [];
-      const found = users.find(x => x.username === u && x.password === p);
-      if (found) {
+      const user = users.find(u => u.username === username && u.password === password);
+      if (user) {
         localStorage.setItem('isAuthenticated', 'true');
-        showSection();
-        alert('Succeeded!');
+        showSections();
       } else {
         localStorage.removeItem('isAuthenticated');
-        alert('Failed.');
-        showAdmin();
+        showSections();
       }
-    };
-    document.getElementById('btnLogout').onclick = () => {
-      localStorage.removeItem('isAuthenticated');
-      showSection();
-    };
-    function showAdmin() {
-      loginSec.style.display = 'none';
-      mainSec.style.display  = 'none';
-      adminSec.style.display = 'block';
-      renderUserList();
     }
-    document.getElementById('btnBackToLogin').onclick = showSection;
-    document.getElementById('formAdd').onsubmit = e => {
+    function showSections() {
+      const auth = localStorage.getItem('isAuthenticated') === 'true';
+      document.getElementById('mainSection').style.display = auth ? 'block' : 'none';
+      document.getElementById('managementSection').style.display = auth ? 'none' : 'block';
+    }
+
+    // User management functions
+    function addUser(e) {
       e.preventDefault();
-      const u = document.getElementById('username').value;
-      const p = document.getElementById('password').value;
-      if (!u || !p) return alert('Please enter username and password.');
+      const username = document.getElementById('newUsername').value;
+      const password = document.getElementById('newPassword').value;
+      if (!username || !password) return alert('Please enter username and password.');
       const users = JSON.parse(localStorage.getItem('users')) || [];
-      users.push({ username: u, password: p });
+      users.push({ username, password });
       localStorage.setItem('users', JSON.stringify(users));
       renderUserList();
       e.target.reset();
-    };
+    }
     function renderUserList() {
-      const ul = document.getElementById('userList');
-      ul.innerHTML = '';
       const users = JSON.parse(localStorage.getItem('users')) || [];
-      users.forEach((user, i) => {
+      const list = document.getElementById('userList'); list.innerHTML = '';
+      users.forEach((u, i) => {
         const li = document.createElement('li');
-        li.textContent = `username: ${user.username}, password: ${user.password} `;
+        li.textContent = `username: ${u.username}, password: ${u.password}`;
         const btn = document.createElement('button');
-        btn.textContent = 'delete';
-        btn.onclick = () => {
-          users.splice(i,1);
-          localStorage.setItem('users', JSON.stringify(users));
-          renderUserList();
-        };
+        btn.textContent = 'delete'; btn.onclick = () => deleteUser(i);
         li.appendChild(btn);
-        ul.appendChild(li);
+        list.appendChild(li);
       });
     }
-    let chartInited = false;
-    function initCharts() {
-      if (chartInited) return;
-      chartInited = true;
-      fetch('data/usage.json')
-        .then(r => r.json())
-        .then(raw => {
-          const map = {};
-          raw.forEach(item=> map[item.date]=item);
-          const history = Object.values(map).sort((a,b)=>new Date(a.date)-new Date(b.date));
-          const labels = history.map(i=>i.date);
-          const names  = Object.keys(history[0]?.devices||{});
-          const colors = { macOS:'rgba(255,99,132,1)', iPad:'rgba(54,162,235,1)', Pixel9:'rgba(255,206,86,1)' };
-          const datasets = names.map(name=>({
-            label: name,
-            data: history.map(i=>i.devices[name]||0),
-            fill:false,
-            borderColor: colors[name]||'rgba(75,192,192,1)',
-            tension:0.1
-          }));
-          new Chart(document.getElementById('usageChart'), { type:'line', data:{ labels, datasets } });
-          const totals = {};
-          names.forEach(n=> totals[n] = history.reduce((s,i)=>s+(i.devices[n]||0),0));
-          const grand = Object.values(totals).reduce((a,b)=>a+b,0);
-          const doughData = names.map(n=> grand?((totals[n]/grand*100).toFixed(3)):0);
-          new Chart(document.getElementById('usageDoughnut'), {
-            type:'doughnut',
-            data: { labels: names, datasets:[{ data: doughData, backgroundColor:Object.values(colors).map(c=>c.replace(',1)',',0.8)')] }],
-            options: { plugins:{ legend:{position:'right'}, title:{display:true,text:'Device Usage Rate (%)'} } }
-          });
-        });
+    function deleteUser(index) {
+      const users = JSON.parse(localStorage.getItem('users')) || [];
+      users.splice(index,1);
+      localStorage.setItem('users', JSON.stringify(users));
+      renderUserList();
     }
-    showSection();
+
+    window.addEventListener('DOMContentLoaded', () => {
+      showSections();
+      renderUserList();
+    });
   </script>
+</head>
+<body>
+  <!-- Management Section -->
+  <div id="managementSection">
+    <h1>User Control Panel</h1>
+    <button onclick="authenticate()">Login to HealthAnalysis</button>
+    <form onsubmit="addUser(event)">
+      <label>username:<input type="text" id="newUsername" required></label><br>
+      <label>password:<input type="password" id="newPassword" required></label><br>
+      <button type="submit">Add user</button>
+    </form>
+    <h2>Registered users list</h2>
+    <ul id="userList"></ul>
+  </div>
+
+  <!-- Main Section -->
+  <div id="mainSection">
+    <h1>HealthAnalysis</h1>
+    <p>It abstracts the health status of each device from its usage time calculated from <a href="https://www.rescuetime.com/">RescueTime</a> and analyzes the data.</p>
+    <canvas id="usageChart" width="800" height="400" style="background: black;"></canvas>
+    <canvas id="usageDoughnut" width="400" height="400" style="background: black;"></canvas>
+    <div id="thresholdInfo"></div>
+    <p><a href="https://github.com/Uchida16104/HealthAnalysis">Repository</a></p>
+    <p>by <a href="https://hirotoshiuchida.glitch.me">Hirotoshi Uchida</a></p>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4/dist/chart.umd.js"></script>
+    <script>
+      fetch('data/usage.json').then(r=>r.json()).then(raw=>{
+        const map = raw.reduce((a,i)=>{a[i.date]=i;return a;},{});
+        const hist = Object.values(map).sort((a,b)=>new Date(a.date)-new Date(b.date));
+        const labels=hist.map(i=>i.date);
+        const names=Object.keys(hist[0]?.devices||{});
+        const colors={macOS:'rgba(255,99,132,1)',iPad:'rgba(54,162,235,1)',Pixel9:'rgba(255,206,86,1)'};
+        const ds=names.map(n=>({label:n,data:hist.map(i=>i.devices[n]||0),fill:false,
+          borderColor:colors[n]||'rgba(75,192,192,1)',backgroundColor:(colors[n]||'rgba(75,192,192,1)').replace(',1)',',0.2)'),tension:0.1}));
+        new Chart(document.getElementById('usageChart'),{type:'line',data:{labels,datasets:ds}});
+        // Doughnut
+        const totals={};names.forEach(n=>{totals[n]=hist.reduce((s,i)=>(s+i.devices[n]||0),0);});
+        const gt=Object.values(totals).reduce((a,b)=>a+b,0);
+        const dd={labels:names,datasets:[{label:'Usage Rate %',data:names.map(n=>gt?(totals[n]/gt*100).toFixed(3):0),
+          backgroundColor:['rgba(255,99,132,0.8)','rgba(54,162,235,0.8)','rgba(255,206,86,0.8)'],hoverOffset:30}]};
+        new Chart(document.getElementById('usageDoughnut'),{type:'doughnut',data:dd,options:{responsive:true,plugins:{legend:{position:'right'},title:{display:true,text:'Device Usage Rate (%)'}}}});
+        // Thresholds
+        const avgs={};names.forEach(n=>{avgs[n]=hist.reduce((s,i)=>(s+i.devices[n]||0),0)/hist.length;});
+        const thr={macOS:5,iPad:2,Pixel9:2};
+        const container=document.getElementById('thresholdInfo');names.forEach(n=>{
+          const ok=avgs[n]<=thr[n];
+          const p=document.createElement('p');
+          p.textContent=`${n} Average: ${avgs[n].toFixed(2)}h — ${ok?'Keep':'Over'}`;
+          p.style.color=ok?'#36A2EB':'#FF6384';container.appendChild(p);
+        });
+      });
+    </script>
+  </div>
 </body>
 </html>
