--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
   <div id="mainSection">
     <h1>HealthAnalysis</h1>
-    <p>It abstracts the health status of each device from its usage time calculated from <a href="https://www.rescuetime.com/">RescueTime</a> and analyzes the data.</p>
+    <p>It abstracts the health status of each device from its operational time calculated from <a href="https://www.rescuetime.com/">RescueTime</a> and analyzes the data.</p>
     <canvas id="usageChart" width="800" height="400" style="background: black;"></canvas>
     <canvas id="usageDoughnut" width="400" height="400" style="background: black;"></canvas>
     <div id="thresholdInfo"></div>
